[package]
name = "spanleaf"
version = "0.1.0"
authors = ["Walker Thornley <thornleywalker@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[dependencies]
dioxus = { version = "0.7.1", features = [] }

spanleaf-core.path = "../spanleaf-core"